# r_boot

./: README.md
linux_master_kp_can_demo/: CMakeLists.txt  compile.sh  main.c
linux_master_kp_can_demo/dev_can/: CMakeLists.txt  dev_can.c  dev_can.h
linux_master_kp_can_demo/r_boot/slaver/: r_boot_slave.h
linux_master_uart_demo/: CMakeLists.txt  compile.sh  gdb.sh  main.c  r_boot_uart_demo  stream_packer.c  stream_packer.h
linux_master_uart_demo/uart/: CMakeLists.txt  uart.c  uart.h
mcu_slave_kp_can_demo/: Demo.ioc
mcu_slave_kp_can_demo/Core/Inc/: main.h
mcu_slave_kp_can_demo/Core/Src/: main.c
mcu_slave_kp_can_demo/MDK-ARM/: Demo.uvguix.88482  Demo.uvoptx  Demo.uvprojx
mcu_slave_kp_can_demo/MDK-ARM/Demo/: Demo.axf  Demo.build_log.htm  Demo.htm  Demo.lnp  Demo_Demo.dep  crc.crf  d_flash.crf  main.crf  r_boot_slave.crf  stm32f405_demo1_can.crf  stm32f405_demo1_flash.crf  stm32f405_demo1_tim.crf  stm32f4xx_hal.crf  stm32f4xx_hal_can.crf  stm32f4xx_hal_cortex.crf  stm32f4xx_hal_crc.crf  stm32f4xx_hal_dma.crf  stm32f4xx_hal_dma_ex.crf  stm32f4xx_hal_exti.crf  stm32f4xx_hal_flash.crf  stm32f4xx_hal_flash_ex.crf  stm32f4xx_hal_flash_ramfunc.crf  stm32f4xx_hal_gpio.crf  stm32f4xx_hal_msp.crf  stm32f4xx_hal_pwr.crf  usr_can.crf  (+9 more)
mcu_slave_uart_demo/: demo_r_boot_slave.ioc
mcu_slave_uart_demo/BSP/: stm32f103rc_demo_r_boot_slave_flash.c  stm32f103rc_demo_r_boot_slave_flash.h
mcu_slave_uart_demo/MDK-ARM/: JLinkLog.txt  demo_r_boot_slave.uvguix.88482  demo_r_boot_slave.uvoptx  demo_r_boot_slave.uvprojx  startup_stm32f103xe.lst
r_boot/slaver/: r_boot_slave.c
(+48 files in other folders)
